Fixed bug #43053 (Regression: some numbers shown in scientific notation). (int-e at gmx dot de) some 64bit test files may need to be fixed